# Sanctifier

./: CONTRIBUTING.md  Cargo.toml  DOCUMENTATION_INDEX.md  README.md
.github/workflows/: benchmarks.yml  ci.yml  soroban-deploy.yml
contracts/benchmark/src/: token.rs  vesting.rs
contracts/governance/: Cargo.toml
contracts/governance/src/: lib.rs
contracts/multisig/src/: lib.rs
contracts/my-contract/test_snapshots/fuzz/: fuzz_allowance_monotone_decrease.1.json  fuzz_allowance_monotone_decrease.2.json  (+41 more)
contracts/proxy/: Cargo.toml
contracts/proxy/src/: lib.rs
contracts/runtime-guard-wrapper/test_snapshots/: execute_guarded_tracks_wrapped_call_result_errors.1.json
contracts/security-disclaimers/src/: lib.rs
contracts/security-disclaimers/tests/: integration_tests.rs  security_disclaimers_tests.rs
docs/: ci-cd-setup.md  docs-specs-ci-coverage.md
frontend/: commitlint.config.js  next.config.ts  package-lock.json
frontend/app/components/: CallGraph.tsx  ContractInteractionVisualizer.tsx  EnhancedContractVisualizer.tsx  FindingsList.tsx  README_ContractVisualization.md
frontend/app/dashboard/: page.tsx
frontend/app/lib/: contractAnalyzer.ts
frontend/app/visualization/: page.tsx
frontend/tests/e2e/: api-security.spec.ts  csp-security.spec.ts  wasm-perf.spec.ts
scripts/: validate_docs_specs.js
tooling/sanctifier-cli/: Cargo.toml
tooling/sanctifier-cli/src/: main.rs  vulndb.rs
tooling/sanctifier-cli/tests/: cli_tests.rs
tooling/sanctifier-core/src/: finding_codes.rs  lib.rs  storage_collision.rs  upgrade_analysis.rs
(+11 files in other folders)
